--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 # Dependency directories (remove the comment below to include it)
 vendor/
 tmp/
+
+terraform/*.tfstate
+terraform/*.tfstate.*
+terraform/.terraform
+terraform/.terraform.*
